[gd_scene load_steps=5 format=3 uid="uid://5qj6oarn3o6l"]

[ext_resource type="Script" path="res://rails/scripts/straight_rail.gd" id="1_rdtwi"]
[ext_resource type="Material" uid="uid://ba4gi4b4lpxtr" path="res://materials/rail.tres" id="2_1tp05"]

[sub_resource type="CylinderMesh" id="CylinderMesh_8hcjj"]
top_radius = 0.1
bottom_radius = 0.1
height = 5.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_pnouv"]
height = 5.0
radius = 0.1

[node name="StraightRail" type="Node3D"]
script = ExtResource("1_rdtwi")
metadata/_edit_group_ = true

[node name="LeftSideRail" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.09782e-08, -1, 0, 1, -5.02914e-08, -3.72529e-09, 0, 0, 1, 0, 1.86265e-09, -0.5)
material_override = ExtResource("2_1tp05")
mesh = SubResource("CylinderMesh_8hcjj")
skeleton = NodePath("LeftSideRailBody")

[node name="LeftSideRailBody" type="StaticBody3D" parent="LeftSideRail"]
transform = Transform3D(-5.21541e-08, 1, 3.72529e-09, -1, -4.84288e-08, 0, 2.98023e-08, 0, 1, 0, 0, 0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LeftSideRail/LeftSideRailBody"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -0.5)
shape = SubResource("CylinderShape3D_pnouv")

[node name="RightSideRail" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.09782e-08, -1, 0, 1, -5.7742e-08, -7.45058e-09, 0, 0, 1, 0, -3.72529e-09, 0.5)
material_override = ExtResource("2_1tp05")
mesh = SubResource("CylinderMesh_8hcjj")
skeleton = NodePath("RightSideRailBody")

[node name="RightSideRailBody" type="StaticBody3D" parent="RightSideRail"]
transform = Transform3D(-6.33299e-08, 1, 7.45058e-09, -1, -4.84288e-08, -2.98023e-08, 2.98023e-08, 0, 1, 0, 1.49012e-08, -0.5)

[node name="CollisionShape3D" type="CollisionShape3D" parent="RightSideRail/RightSideRailBody"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0.5)
shape = SubResource("CylinderShape3D_pnouv")

[node name="HeadMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0, 0)

[node name="TailMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 0, 0)
